--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,21 +2,22 @@ name: CI/CD for NOWEX-UI
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
   pull_request:
-    branches:
-      - main
+    branches: ["main"]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: admin-ui
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
@@ -25,11 +26,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run lint
-        run: npm run lint
+      - name: Lint
+        run: npm run lint --if-present
 
-      - name: Run tests
-        run: npm run test -- --watch=false
+      - name: Test
+        run: npm test --if-present
 
-      - name: Build project
-        run: npm run build
+      - name: Build
+        run: npm run build --if-present
