--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: admin-ui
+        working-directory: admin-ui # مسیر درست برای package.json و lockfile
 
     steps:
       - name: Checkout code
@@ -22,6 +22,7 @@ jobs:
         with:
           node-version: "20"
           cache: "npm"
+          cache-dependency-path: admin-ui/package-lock.json # مسیر lockfile درست
 
       - name: Install dependencies
         run: npm install
