--- a/admin-ui/package.json
+++ b/admin-ui/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
