--- a/admin-ui/package.json
+++ b/admin-ui/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
-    "@types/node": "^20",
+    "@types/node": "^20.19.27",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.23",
@@ -18,14 +18,19 @@
     "eslint-config-next": "16.0.10",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@nextui-org/react": "^2.6.11",
     "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.23.26",
     "next": "^14.1.0",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-multi-date-picker": "^4.5.2",
+    "recharts": "^3.6.0"
   }
 }
