--- a/admin-ui/package.json
+++ b/admin-ui/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-multi-date-picker": "^4.5.2",
+    "react-responsive": "^10.0.1",
     "recharts": "^3.6.0"
   }
 }
